services/nextcloud/nextcloud.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: "nextcloud"
  name: "nextcloud-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Increase the size of the maximum allowed size of the client request body
spec:
  tls:
    - hosts:
        - "drive.barnes.biz"
      secretName: "nextcloud-prod-tls"
  rules:
    - host: "drive.barnes.biz"
      http:
        paths:
          - path: /
            backend:
              serviceName: "nextcloud" # Mapping to the service (see kubectl get services -n nextcloud)
              servicePort: 8080 # Mapping to the port (see kubectl get services -n nextcloud)
